fixed spacing for mobile screens

--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -41,6 +41,7 @@ body, html {
     padding: 20px;
     text-align: center;
     width: 80%;
+    max-width: 300px;
     display: block;
     margin: auto;
     color:rgb(94, 94, 94);
